@@ -1,8 +1,8 @@
-# $NetBSD: Makefile,v 1.5 2002/08/25 18:38:30 jlam Exp $
+# $NetBSD: Makefile,v 1.6 2002/12/31 19:06:57 jlam Exp $
 #
 
-DISTNAME=	mm-1.2.1
-PKGNAME=	libmm-1.2.1
+DISTNAME=	mm-1.2.2
+PKGNAME=	lib${DISTNAME}
 CATEGORIES=	devel
 MASTER_SITES=	ftp://ftp.ossp.org/pkg/lib/mm/
 
